fix event details card spacing

--- a/frontend/src/stylesheets/components/_calendar.scss
+++ b/frontend/src/stylesheets/components/_calendar.scss
@@ -201,7 +201,7 @@
 .event-details-container {
     width: 300px;
     height: 512px;
-    margin-top: 21px;
+    margin-top: 64px;
     margin-left: $margin-content;
     border-radius: $radius;
     flex-shrink: 0;
@@ -439,7 +439,7 @@
     .event-details-container {
         width: 250px;
         height: 420px;
-        margin-top: 19px;
+        margin-top: 61px;
         margin-left: 4px;
     }
 
